# assignment-hm-mehedi-hasan

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
config/: config.yaml
data/: processed.txt
src/: main.py
src/api/: models.py
src/api/middleware/: rate_limit.py
src/api/routers/: chat.py
src/database/: chroma_db.py
src/services/memory/: memory_manager.py
src/services/rag/: rag_chat.py
src/services/rag/preprocessing/: preprocess.py
src/services/rag/prompts/: prompt.py
src/services/rag/prompts/v250718/: extract_prompt.txt  rag_prompt.txt
src/services/rag/utils/: llm.py
src/utils/: config.py  helper.py  logger.py
